<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_finished">Finished Events</string>
    <string name="search_hint">Search Event</string>
    <string name="open_link">Open Event Link</string>
    <string name="quota_format">Quota: %1$d</string>
    <string name="event_image">Event Image</string>
    <string name="error_message">An error occurred: %1$s</string>
    <string name="menu_home">Home</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_finished">Finished</string>
    <string name="error_title">Something went wrong</string>
    <string name="error_desc">Please check your internet connection or try again later.</string>
    <string name="btn_retry">Try Again</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Setting</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_data_found_desc">We couldn\'t find any events matching your search.</string>
</resources>
