<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/menu_upcoming" />
    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished"
        android:title="@string/menu_finished" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorite" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_setting" />
</menu>
