<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/error_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/img_error"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/error_message"
        android:src="@android:drawable/stat_notify_error"
        app:layout_constraintBottom_toTopOf="@+id/tv_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/navy_blue" />

    <TextView
        android:id="@+id/tv_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/error_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/navy_blue"
        app:layout_constraintBottom_toTopOf="@+id/tv_error_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_error" />

    <TextView
        android:id="@+id/tv_error_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/error_desc"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_title" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
